Fix code highlight width issue again, and also make ribbon not covers title and text

--- a/themes/landscape/source/css/_partial/highlight.styl
+++ b/themes/landscape/source/css/_partial/highlight.styl
@@ -42,6 +42,7 @@ $line-numbers
       padding: 0
   .highlight
     @extend $code-block
+    width: 100%
     pre
       border: none
       margin: 0
